additional tests